--- a/example/example3/index.html
+++ b/example/example3/index.html
@@ -10,7 +10,8 @@
 
 		<!-- D3.js -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.3.0/d3-legend.js" charset="utf-8"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.3.0/d3-legend.js" charset="utf-8"></script>
+	  
 		
 		<style>
 			body {
@@ -31,10 +32,19 @@
 			.tooltip {
 				fill: #333333;
 			}
+
+			
 		</style>
 	
 	</head>
 	<body>
+
+			
+	<!--  testeando tabs-->
+
+	
+
+			
 		<div id="radarChart"></div>
       <script src="radarChart.js"></script>
 
@@ -43,8 +53,8 @@
 				.range(["#EDC951","#CC333F","#00A0B0"]);
 				
 			var radarChartOptions = {
-           width: 500,
-           height: 500,
+           width: 625,
+           height: 625,
 			  color: color
 			};
 
@@ -56,6 +66,8 @@
          radarChart.options(radarChartOptions).update();
 
 		</script>
+
+		
 
       <script src="radarDemo.js"></script>
 	</body>
